# ai-engineering

./: .gitignore  CLAUDE.md  docker-compose.yml
estimator/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
estimator-web/: Dockerfile  Gemfile  README.md  docker-compose.yml
estimator-web/app/controllers/: estimations_controller.rb
estimator-web/app/models/: estimation.rb  estimation_request.rb  estimation_response.rb  estimation_result.rb  phase.rb
estimator-web/config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
estimator-web/config/initializers/: estimator_ai.rb
estimator-web/db/: schema.rb
estimator-web/db/migrate/: 20260514120000_create_estimations.rb
estimator-web/test/controllers/: estimations_controller_test.rb
estimator/app/: config.py  dependencies.py  main.py
estimator/app/cache/: semantic.py
estimator/app/guardrails/: output.py
estimator/app/prompts/: __init__.py  loader.py
estimator/app/prompts/estimation/v1/: examples.j2  system.j2  user.j2
estimator/app/prompts/estimation/v2/: system.j2  user.j2
estimator/app/routers/: estimations.py  sessions.py
estimator/app/schemas/: estimation.py  session.py
estimator/app/services/: cache.py  conversation.py  document.py  estimation.py  llm_service.py  llm_wrapper.py  session.py
estimator/tests/: test_cache_semantic.py  test_estimate_endpoint.py  test_guardrails_input.py  test_guardrails_output.py  test_llm_wrapper.py  test_prompts.py  test_schemas.py
estimator/tests/prompts/: test_estimation_v1.py
(+14 files in other folders)
